--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -4,5 +4,7 @@
   <a class="hover:underline" [routerLink]="['/about']" routerLinkActive="text-blue-500 underline" >About</a>
   <a class="hover:underline" [routerLink]="['/pricing']" routerLinkActive="text-blue-500 underline" >Pricing</a>
   <a class="hover:underline" [routerLink]="['/contact']" routerLinkActive="text-blue-500 underline" >Contact</a>
+  <a class="hover:underline" [routerLink]="['/pokemons']" routerLinkActive="text-blue-500 underline" >Pokemons</a>
+
 
 </nav>
