--- a/src/app/pages/pokemon/pokemon-page.component.html
+++ b/src/app/pages/pokemon/pokemon-page.component.html
@@ -3,19 +3,37 @@
     <h1 class="text-4xl font-bold">Loading...</h1>
   </div>
 } @else {
+  @let myPokemon = pokemon()!;
 
   <section class="flex flex-col justify-center">
     <div class="flex justify-center">
-      <h1 class="text-4xl font-bold capitalize my-5">{{ pokemon()?.name }}</h1>
+      <h1 class="text-4xl font-bold capitalize my-5">{{ myPokemon.name }}</h1>
     </div>
   </section>
 
   <section class="flex flex-col justify-center items-center w-full">
-    <img [src]="pokemon()!.sprites?.other?.['official-artwork']?.front_default"
-      [alt]="pokemon()!.name"
-      class="w-64 m-64"
+    <img [src]="myPokemon.sprites.other?.['official-artwork']?.front_default"
+      [alt]="myPokemon.name"
+      class="w-64 h-64"
       width="256px"
       height="256px">
+  </section>
+
+  @if( myPokemon.cries.latest !== null ){
+    <audio controls class="my-10">
+      <source [src]="myPokemon.cries.latest" type="audio/wav">
+    </audio>
+  }
+
+  <section class="flex flex-col justify-center">
+    <h2 class="text-2xl font-bold mt-2">Abilities</h2>
+    <div class="flex flex-wrap items-center">
+      @for (ability of myPokemon.abilities; track ability.ability.name) {
+        <span>
+          {{ ability.ability.name }}
+        </span>
+      }
+    </div>
   </section>
 
 }
