--- a/src/app/pages/pokemon/pokemon-page.component.html
+++ b/src/app/pages/pokemon/pokemon-page.component.html
@@ -16,20 +16,22 @@
       [alt]="myPokemon.name"
       class="w-64 h-64"
       width="256px"
-      height="256px">
+      height="256px"/>
   </section>
 
   @if( myPokemon.cries.latest !== null ){
-    <audio controls class="my-10">
-      <source [src]="myPokemon.cries.latest" type="audio/wav">
-    </audio>
+    <div class="flex flex-col justify-center items-center">
+      <audio controls class="my-10">
+        <source [src]="myPokemon.cries.latest" type="audio/wav">
+      </audio>
+    </div>
   }
 
-  <section class="flex flex-col justify-center">
+  <section class="flex flex-col justify-center items-center">
     <h2 class="text-2xl font-bold mt-2">Abilities</h2>
     <div class="flex flex-wrap items-center">
       @for (ability of myPokemon.abilities; track ability.ability.name) {
-        <span>
+        <span class="mx-2">
           {{ ability.ability.name }}
         </span>
       }
