Server side rendering Static generation
Se agrego el archivo de routes.txt y se genera automáticamente. Para la carga statica

--- a/src/app/pages/pokemons/pokemons-page.component.html
+++ b/src/app/pages/pokemons/pokemons-page.component.html
@@ -14,10 +14,11 @@
 <!-- todO Buttons Cargar siguiente y anteriores -->
 
 <div class="flex justify-between">
-  <button class="mt-2" (click)="loadPokemons(-1)">
-    Anteriores
-  </button>
-  <button class="mt-2" (click)="loadPokemons(+1)" >
-    Siguientes
-  </button>
+  <button class="mt-2"
+  [disabled]="currentPage() === 1"
+  [routerLink]="['/pokemons/page', currentPage()! - 1]"
+    >Anteriores</button>
+  <button class="mt-2"
+  [routerLink]="['/pokemons/page', currentPage()! + 1]"
+    >Siguientes</button>
 </div>
