--- a/src/app/pokemons/components/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemons/components/pokemon-list/pokemon-list.component.html
@@ -3,10 +3,10 @@
   <!-- 12 pokemonsCard -->
   @for (pokemon of pokemons(); track pokemon.id) {
     <pokemon-card [pokemon]="pokemon"/>
+  } @empty {
+    <div class="col-span-5 text-center border-white h-28 flex justify-center items-center">
+      No hay pokémons
+    </div>
   }
-  <!-- Todo Si no hay -->
-  <div class="col-span-5 text-center border-white h-28 flex justify-center items-center">
-    No hay pokemons
-  </div>
 
 </div>
